--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
         <div id="container">
             <h1>Todo List</h1>
-            <input type="text">
-            <ul>
+            <input id="addtodo" type="text">
+            <ul id="todolist">
                 <li><span>X</span>Work 1</li>
                 <li><span>X</span>Work 2</li>
                 <li><span>X</span>Work 3</li>
