--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="assets/css/todos.css" type="text/css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            
     </head>
     <body>
         <div id="container">
-            <h1>Todo List</h1>
-            <input id="addtodo" type="text">
+            <h1 id="name">Todo List <i id="editbutton" class="material-icons">mode_edit</i> </h1>
+            <input id="addtodoinput" class="browser-default" type="text" placeholder="Add New Todo">
             <ul id="todolist">
-                <li><span>X</span>Work 1</li>
-                <li><span>X</span>Work 2</li>
-                <li><span>X</span>Work 3</li>
+                <li><span><i class="fa fa-trash"></i></span>Work 1</li>
+                <li><span><i class="fa fa-trash"></i></span>Work 2</li>
+                <li><span><i class="fa fa-trash"></i></span>Work 3</li>
+            </ul>
+        </div>
+        <div id="fab" class="fixed-action-btn">
+            <a class="btn-floating btn-large red">
+              <i class="large material-icons">mode_edit</i>
+            </a>
+            <ul id="fab-elements" >
+              <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+              <li><a class="btn-floating yellow"><i class="material-icons">format_quote</i></a></li>
+              <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+              <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
             </ul>
         </div>
         <script src="assets/js/lib/index.js" type="text/javascript"></script>
