Minor Fix(Initial version)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             
     </head>
     <body>
-        <div>
-            <button id="change-theme">Light Theme</button>
+        <div id="change-theme-bg">
+            <a id="change-theme" class="waves-effect waves-light btn blue">
+                <i class="material-icons left">wb_sunny</i>Dark Theme
+            </a>
         </div>
         <div id="container">
             <h1 id="name">Todo List <i id="editbutton" class="material-icons">mode_edit</i> </h1>
